[SWU-85] : fix for header alignment on desktop small view.

--- a/swinburne-aem-prototype/source/v2/scss/layout/_header.scss
+++ b/swinburne-aem-prototype/source/v2/scss/layout/_header.scss
@@ -210,6 +210,10 @@
           flex-direction: column;
         }
       }
+
+      @include media-breakpoint-up(lg) {
+        justify-content: flex-end;
+      }
     }
     @include media-breakpoint-down(md) {
       display: flex;
